--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script text="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
