--- a/bonus/index.html
+++ b/bonus/index.html
@@ -9,9 +9,13 @@
 <body>
     <div id="esercizio">
         <div v-html="ciao"></div>
+        <img :src="immagine">
     </div>
 
+    <!-- script Vue -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    
+    <!-- script JS -->
     <script text="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
