--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <div v-html="ciao"></div>
     </div>
 
+    <!-- script Vue -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    
+    <!-- script JS -->
     <script text="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
